@@ -24,6 +24,7 @@ Version 1.7.0+svn:
    * Replace the campaign dialog with a new gui one (debian bug #497655)
    * Removed the hidden option to disable the tips of the day
    * A click on a slider now properly sets the position
+   * WML generated messages, labels and sounds are skiped during replay (bug #13519)
  * WML Engine:
    * Made new turn, turn X, side turn and turn refresh events synchronous.
      (bug #10603)
